gtkpod V0.95.CVS
       UPDATED Hebrew translation (thanks to Assaf Gillat)

       CHANGE: MP3 tags: use 'Band/Orchestra/Accompaniment' (TPE2) as
       artist if it exists. Otherwise use 'Lead artist/Lead
       performer/Soloist/Performing group' (TPE1) as before. Let me
       know if this causes problems for you.

       BUGFIX: Copying playlists by drag and drop could confuse smart
       playlists referencing these playlists. Fixed.

After copying playlists by drag and drop, smart
       playlists refering to these playlists could become confused.

gtkpod V0.94.0
       NEW FEATURE: stable sorting of track view. This allows you, for
       example, to first sort by title, then by artist. The list will
       then be sorted by artist, but all titles of each artist remain
       sorted as well (before the tiles were random).
       Arbitrary depth and order of stable sorting is possible by
       clicking the sort columns in the desired order.

       NEW FEATURE: define your own ignore list of words that should
       be ignored during sorting (sort options: ctrl-s).

       IMPROVEMENT: improved handling of dangling files (files that
       are referenced in the iTunesDB but are not present on the
       iPod).

       IMPROVEMENT: use 'eject' instead of 'umount'. Also fixes the
       bug that 'could not unmount' was always displayed, even if the
       umount was successful (thanks to Andreas Hauber).

       BUGFIX: Some iTunesDB files written by iTunes could not be read
       because of an error in the parse code (gtkpod would attempt to
       read beyond the end of the file).

       BUGFIX: Fixed compatibility issue with new firmware 3.1 and
       iTunes 4.9 (only 256 tracks were shown on the iPod, iTunes
       removed the majority of the tracks from the iPod). Podcasts are
       still not supported, however, and will be lost when handled by
       gtkpod.

       BUGFIX: Fixed On-The-Go playlist handling (thanks to "Todd").
